# ComfyUI-Google-AI-Studio

./: README.md  google_ai_studio_nodes.py  pyproject.toml  requirements.txt
example_workflows/: example_workflow.json
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
web/: persist_preview.js
