[project]
name = "ComfyUI-Google-AI-Studio"
description = "Google AI Studio by BuffMcBigHuge"
version = "1.2.0"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/BuffMcBigHuge/ComfyUI-Google-AI-Studio"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "buffmcbighuge"
DisplayName = "ComfyUI-Google-AI-Studio"
Icon = ""
